Applies the footer fix to remove white space to the new index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ Update: changing something in the main section meant all of this came out of ali
 .carousel-style {
     margin-top: 20px;
     margin-right: 20px;
-    margin-left: 20px;
+    margin-left: 50px;
 }
 
 .picture-container {
@@ -324,6 +324,7 @@ different media queries may become necessary for individual pages.*/
     }
 }
 
+/*Can the below be removed?*/
 @media screen and (min-width: 1500px) {
     #facilities-image-fill {
         height: 90vh;
